# cms_webapp

./: README.md  cms_webapp_db  dev_notes.md  manage.py  mkdwn_to_db.py  pyproject.toml  sandbox.py
cms/: settings.py  urls.py
cms_mkdwn/: admin.py  apps.py  models.py  urls.py  views.py
cms_mkdwn/migrations/: 0001_initial.py  0002_alter_markdowncontent_options.py
cms_mkdwn/templates/: content.html  content_list.html
cms_mkdwn/templatetags/: markdown_extras.py
cms_webapp/: asgi.py  settings.py  urls.py  views.py  wsgi.py
cms_webapp/templates/cms_webapp/: home.html
samples/: 01_alsace.md  03_burgundy.md  12_germany.md  mkdntest.py  test_mkdwn.html
test_mkdwn/: test_mkdwn.md
